--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "react-native": "0.72.6",
     "react-native-web": "~0.19.6",
+    "sass": "^1.71.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.4.1"
   },
   "private": true
 }
