--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.19.3",
+    "@types/react": "~18.2.14",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "expo": "~49.0.15",
@@ -21,7 +24,9 @@
     "react-native": "0.72.6",
     "react-native-web": "~0.19.6",
     "sass": "^1.71.1",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "typescript": "^5.1.3",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
