--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.19.3",
+    "@react-navigation/native": "^6.1.12",
     "@types/react": "~18.2.14",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
@@ -22,6 +23,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "0.72.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "sass": "^1.71.1",
     "styled-components": "^6.1.8",
