--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.19.3",
     "@react-navigation/native": "^6.1.12",
     "@types/react": "~18.2.14",
@@ -19,10 +18,11 @@
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "0.72.6",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
