--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-google-maps/api": "^2.19.3",
+    "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
+    "@react-navigation/native-stack": "^6.9.20",
+    "@react-navigation/stack": "^6.3.23",
     "@types/react": "~18.2.14",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
@@ -23,7 +26,7 @@
     "react-icons": "^5.0.1",
     "react-native": "0.72.6",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "sass": "^1.71.1",
