--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "expo": "~49.0.15",
+    "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
