--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "expo": "~49.0.15",
+    "expo-document-picker": "^11.10.1",
+    "expo-image-picker": "~14.3.2",
+    "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
+    "react-native-document-picker": "^4.1.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.1.0",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "sass": "^1.71.1",
