--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@react-navigation/stack": "^6.3.23",
     "@types/react": "~18.2.14",
     "axios": "^1.6.7",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.4.0",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "0.72.6",
