--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "react-icons": "^5.0.1",
     "react-native": "0.72.6",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-image-picker": "^7.1.0",
     "react-native-web": "~0.19.6",
     "sass": "^1.71.1",
     "styled-components": "^6.1.8",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "sonarqube-scanner": "^3.4.0",
     "tailwindcss": "^3.4.1"
   },
   "private": true
