--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
@@ -26,7 +25,6 @@
     "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
-    "global": "^4.4.0",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-datepicker": "^6.3.0",
@@ -43,27 +41,10 @@
     "styled-components": "^6.1.8",
     "typescript": "^5.1.3",
     "use-places-autocomplete": "^4.0.1",
-    "yarn": "^1.22.22",
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-flow": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@testing-library/dom": "^10.1.0",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/react-native": "^12.5.1",
-    "axios-mock-adapter": "^1.22.0",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "jest-css-modules": "^2.1.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "react-test-renderer": "^18.3.1",
-    "sonarqube-scanner": "^3.4.0",
+    "@babel/core": "^7.20.0",
     "tailwindcss": "^3.4.1"
   },
   "private": true
