--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
+    "global": "^4.4.0",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-datepicker": "^6.3.0",
@@ -41,6 +42,7 @@
     "styled-components": "^6.1.8",
     "typescript": "^5.1.3",
     "use-places-autocomplete": "^4.0.1",
+    "yarn": "^1.22.22",
     "yup": "^1.3.3"
   },
   "devDependencies": {
