--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
@@ -16,6 +17,11 @@
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "@react-navigation/stack": "^6.3.23",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/react-native": "^12.5.1",
     "@types/react": "~18.2.14",
     "axios": "^1.6.7",
     "date-fns": "^3.4.0",
@@ -25,6 +31,9 @@
     "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
+    "jest": "^29.7.0",
+    "jest-css-modules": "^2.1.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-datepicker": "^6.3.0",
@@ -32,11 +41,13 @@
     "react-icons": "^5.0.1",
     "react-native": "0.72.10",
     "react-native-document-picker": "^4.1.0",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
+    "react-test-renderer": "^18.3.1",
     "sass": "^1.71.1",
     "styled-components": "^6.1.8",
     "typescript": "^5.1.3",
