--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native": "0.72.10",
     "react-native-document-picker": "^4.1.0",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "^4.6.3",
