--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "@expo/webpack-config": "^19.0.0",
     "@react-google-maps/api": "^2.19.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
@@ -23,7 +25,7 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/react-native": "^12.5.1",
     "@types/react": "~18.2.14",
-    "axios": "^1.6.7",
+    "axios": "^1.7.2",
     "date-fns": "^3.4.0",
     "expo": "~49.0.15",
     "expo-document-picker": "^11.10.1",
@@ -44,6 +46,7 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.1.0",
+    "react-native-maps": "^1.15.6",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
